--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#8BC34A</color>
-    <color name="colorPrimaryDark">#689F38</color>
-    <color name="colorAccent">#8BC34A</color>
-
-    <color name="transparentBlack">#EE000000</color>
-
-    <color name="lightGray">#66000000</color>
+    <color name="pixabay_black">#de000000</color>
+    <color name="pixabay_gray_50">#fafafa</color>
+    <color name="pixabay_gray_50_a600">#99fafafa</color>
+    <color name="pixabay_green_300">#6dc790</color>
+    <color name="pixabay_green_500">#49bb79</color>
+    <color name="pixabay_green_700">#005d2b</color>
+    <color name="pixabay_green_900">#1a231e</color>
+    <color name="pixabay_white">#deffffff</color>
+    <color name="pixabay_yellow_300">#f8f99f</color>
+    <color name="pixabay_yellow_500">#ffff63</color>
 </resources>
